# MiniClaude

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  LICENSE  Makefile  README.md  RUNBOOK.md  WIRE_PROTOCOL.md  pyproject.toml  trace_permission_flow.py
.mini/: context.md
scripts/: gen_protocol_doc.py
src/mini_claude/cli/: __main__.py  main.py
src/mini_claude/cli/commands/: chat.py  core.py  ping.py  run.py  trace.py  version.py
src/mini_claude/core/: __main__.py  app.py  config.py  context.py  logging_setup.py  loop.py  runner.py  runs.py
src/mini_claude/core/agents/: __init__.py  loader.py
src/mini_claude/core/bus/: __init__.py  commands.py  envelope.py  events.py
src/mini_claude/core/compact/: __init__.py  budget.py  compactor.py
src/mini_claude/core/events/: __init__.py  (+2 more)
src/mini_claude/tui/: __main__.py  app.py
tests/: conftest.py
tests/integration/: test_ping_roundtrip.py  test_run_e2e.py  test_s2_dual_process.py  test_s3_task_graph.py  test_s4_session_ipc.py  test_s5_permission_flow.py
tests/unit/: test_agent_profile_loader.py  test_budget.py  test_builtin_tools.py  test_commands_events.py  test_compactor.py  test_config_env.py  test_context.py  test_context_system_prompt.py  test_envelope.py  test_event_bus.py  test_event_writer.py  test_invocation.py  test_ipc_broadcaster.py  test_llm_provider.py  test_loop.py  test_mcp_tool.py  test_memory_loader.py  test_note_save_tool.py  test_permission_manager.py  test_permission_policy.py  test_read_file.py  test_runner.py  test_session_manager.py  test_session_store.py  test_skill_loader.py  test_socket_client.py  test_socket_server.py  test_spawn_agent_tool.py  test_stdout_printer.py  test_task_manager.py  test_task_model.py  test_tool_params.py  test_tool_registry.py  test_tool_retry.py  test_trace_writer.py  test_tracing_provider.py  test_tui_app.py
(+56 files in other folders)
