# MiniClaude 项目配置（PEP 621 + Hatch 构建 + 常用工具链）

# ---- PEP 517：声明如何构建 wheel/sdist ----
[build-system]
requires = ["hatchling"]          # 构建时需要的后端包
build-backend = "hatchling.build" # 使用 Hatchling 作为构建后端

# ---- 项目元数据与运行时依赖（PEP 621）----
[project]
name = "MiniClaude"
version = "0.0.1"
requires-python = ">=3.12,<3.13" # 仅支持 3.12 小版本范围，与 CI/类型检查一致
dependencies = [
    "pydantic>=2.0",       # 数据校验与序列化（含 JSON 模型等）
    "python-dotenv>=1.0",  # .env 文件解析
    "anthropic>=0.25",     # Anthropic LLM SDK（流式 + prompt caching）
]

# 安装后可在 PATH 中执行的入口：`mini` / `mini-core` / `mini-tui`
[project.scripts]
mini = "mini_claude.cli.main:main"
mini-core = "mini_claude.core.app:run"
mini-tui = "mini_claude.tui.__main__:main"

# ---- Hatch：打 wheel 时从 src 布局收录包 ----
[tool.hatch.build.targets.wheel]
packages = ["src/mini_claude"] # 源码在 src/mini_claude

# ---- 开发期依赖（PEP 735）----
[dependency-groups]
dev = [
    "ruff>=0.4",            # 快速 linter + import 排序等
    "mypy>=1.10",           # 静态类型检查
    "pytest>=8.0",          # 单元测试
    "pytest-asyncio>=0.23", # 异步测试支持
]

# ---- Ruff：统一代码风格 ----
[tool.ruff]
src = ["src"]            # 分析路径，便于识别第一方代码
line-length = 100        # 行长上限
target-version = "py312" # 语法/规则按 Python 3.12

[tool.ruff.lint]
select = ["E", "F", "I", "UP"] # pycodestyle 错误、Pyflakes、isort、pyupgrade
ignore = []

# ---- Mypy：严格类型检查 ----
[tool.mypy]
python_version = "3.12"
strict = true                 # 启用严格模式
mypy_path = "src"             # 将 src 加入模块搜索路径
explicit_package_bases = true # 明确包根，减少隐式命名空间误判

# ---- Pytest：默认发现 tests/，异步用例自动管理 event loop ----
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that call the real Anthropic API (require ANTHROPIC_API_KEY)",
]
